[OfflinePages] Clear busy flag in StopPrerendering() in Request Coordinator.

BUG=641000

Review-Url: https://codereview.chromium.org/2280713002
Cr-Commit-Position: refs/heads/master@{#414492}

Former-commit-id: 04393ae1d214fb35a457927a48060191b9acd3e8